Add commons-lins from Apache Foundation + manual classpath processing through Java Reflection.
Chapter 1 has been almost finished.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,9 +4,12 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/applicationContext.xml</param-value>
     </context-param>
+    <!-- There 2 ways to initialize Spring application contex : through listener
+    (nor working with Servlet 2.3 or less) or servlet (working with alll versions)
+    -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
+    </listener>ф
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
