--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,13 +28,15 @@ endorsed.classpath=\
 excludes=
 file.reference.com.springsource.org.hamcrest.core-1.1.0.jar=lib/com.springsource.org.hamcrest.core-1.1.0.jar
 file.reference.com.springsource.org.objenesis-1.0.0.jar=lib/com.springsource.org.objenesis-1.0.0.jar
+file.reference.commons-lang3-3.1.jar=lib\\commons-lang3-3.1.jar
+file.reference.commons-vfs2-2.0.jar=lib\\commons-vfs2-2.0.jar
 file.reference.mockito-core-1.9.5.jar=lib/mockito-core-1.9.5.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/ecj-4.2.1.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/catalina-tribes.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.2.1.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
@@ -42,7 +44,9 @@ javac.classpath=\
     ${libs.jstl11.classpath}:\
     ${file.reference.mockito-core-1.9.5.jar}:\
     ${file.reference.com.springsource.org.objenesis-1.0.0.jar}:\
-    ${file.reference.com.springsource.org.hamcrest.core-1.1.0.jar}
+    ${file.reference.com.springsource.org.hamcrest.core-1.1.0.jar}:\
+    ${file.reference.commons-lang3-3.1.jar}:\
+    ${file.reference.commons-vfs2-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
