--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.asm-3.1.jar=lib\\asm-3.1.jar
 file.reference.com.springsource.org.hamcrest.core-1.1.0.jar=lib/com.springsource.org.hamcrest.core-1.1.0.jar
 file.reference.com.springsource.org.objenesis-1.0.0.jar=lib/com.springsource.org.objenesis-1.0.0.jar
 file.reference.commons-lang3-3.1.jar=lib\\commons-lang3-3.1.jar
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.com.springsource.org.objenesis-1.0.0.jar}:\
     ${file.reference.com.springsource.org.hamcrest.core-1.1.0.jar}:\
     ${file.reference.commons-lang3-3.1.jar}:\
-    ${file.reference.commons-vfs2-2.0.jar}
+    ${file.reference.commons-vfs2-2.0.jar}:\
+    ${file.reference.asm-3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
