--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,8 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.asm-3.1.jar=lib\\asm-3.1.jar
+file.reference.com.springsource.org.aopalliance-1.0.0.jar=lib\\com.springsource.org.aopalliance-1.0.0.jar
+file.reference.com.springsource.org.aspectj.weaver-1.6.3.RELEASE.jar=lib\\com.springsource.org.aspectj.weaver-1.6.3.RELEASE.jar
 file.reference.com.springsource.org.hamcrest.core-1.1.0.jar=lib/com.springsource.org.hamcrest.core-1.1.0.jar
 file.reference.com.springsource.org.objenesis-1.0.0.jar=lib/com.springsource.org.objenesis-1.0.0.jar
 file.reference.commons-lang3-3.1.jar=lib\\commons-lang3-3.1.jar
@@ -48,7 +50,9 @@ javac.classpath=\
     ${file.reference.com.springsource.org.hamcrest.core-1.1.0.jar}:\
     ${file.reference.commons-lang3-3.1.jar}:\
     ${file.reference.commons-vfs2-2.0.jar}:\
-    ${file.reference.asm-3.1.jar}
+    ${file.reference.asm-3.1.jar}:\
+    ${file.reference.com.springsource.org.aspectj.weaver-1.6.3.RELEASE.jar}:\
+    ${file.reference.com.springsource.org.aopalliance-1.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -71,6 +75,7 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.preview=true
 javadoc.private=false
+javadoc.reference.com.springsource.org.aspectj.weaver-1.6.3.RELEASE.jar=lib/aspectjweaver-1.6.1-javadoc.jar
 javadoc.reference.mockito-core-1.9.5.jar=lib/javadoc
 javadoc.splitindex=true
 javadoc.use=true
@@ -87,6 +92,8 @@ run.test.classpath=\
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
 runmain.jvmargs=
 source.encoding=UTF-8
+source.reference.com.springsource.org.aopalliance-1.0.0.jar=lib/com.springsource.org.aopalliance-sources-1.0.0.jar
+source.reference.com.springsource.org.aspectj.weaver-1.6.3.RELEASE.jar=lib/com.springsource.org.aspectj.weaver-sources-1.6.3.RELEASE.jar
 source.reference.mockito-core-1.9.5.jar=lib/mockito-core-1.9.5-sources.jar
 source.root=src
 src.dir=${source.root}/java
