Forces commit to for a new checkout. FIX AOP features

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,8 +27,8 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.asm-3.1.jar=lib\\asm-3.1.jar
+file.reference.aspectjweaver-1.6.2.jar=lib\\aspectjweaver-1.6.2.jar
 file.reference.com.springsource.org.aopalliance-1.0.0.jar=lib\\com.springsource.org.aopalliance-1.0.0.jar
-file.reference.com.springsource.org.aspectj.weaver-1.6.3.RELEASE.jar=lib\\com.springsource.org.aspectj.weaver-1.6.3.RELEASE.jar
 file.reference.com.springsource.org.hamcrest.core-1.1.0.jar=lib/com.springsource.org.hamcrest.core-1.1.0.jar
 file.reference.com.springsource.org.objenesis-1.0.0.jar=lib/com.springsource.org.objenesis-1.0.0.jar
 file.reference.commons-lang3-3.1.jar=lib\\commons-lang3-3.1.jar
@@ -43,7 +43,6 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.spring-framework300.classpath}:\
     ${libs.jstl11.classpath}:\
     ${file.reference.mockito-core-1.9.5.jar}:\
     ${file.reference.com.springsource.org.objenesis-1.0.0.jar}:\
@@ -51,8 +50,9 @@ javac.classpath=\
     ${file.reference.commons-lang3-3.1.jar}:\
     ${file.reference.commons-vfs2-2.0.jar}:\
     ${file.reference.asm-3.1.jar}:\
-    ${file.reference.com.springsource.org.aspectj.weaver-1.6.3.RELEASE.jar}:\
-    ${file.reference.com.springsource.org.aopalliance-1.0.0.jar}
+    ${file.reference.com.springsource.org.aopalliance-1.0.0.jar}:\
+    ${file.reference.aspectjweaver-1.6.2.jar}:\
+    ${libs.spring-framework300.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -75,7 +75,6 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.preview=true
 javadoc.private=false
-javadoc.reference.com.springsource.org.aspectj.weaver-1.6.3.RELEASE.jar=lib/aspectjweaver-1.6.1-javadoc.jar
 javadoc.reference.mockito-core-1.9.5.jar=lib/javadoc
 javadoc.splitindex=true
 javadoc.use=true
@@ -93,7 +92,6 @@ run.test.classpath=\
 runmain.jvmargs=
 source.encoding=UTF-8
 source.reference.com.springsource.org.aopalliance-1.0.0.jar=lib/com.springsource.org.aopalliance-sources-1.0.0.jar
-source.reference.com.springsource.org.aspectj.weaver-1.6.3.RELEASE.jar=lib/com.springsource.org.aspectj.weaver-sources-1.6.3.RELEASE.jar
 source.reference.mockito-core-1.9.5.jar=lib/mockito-core-1.9.5-sources.jar
 source.root=src
 src.dir=${source.root}/java
